// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag renders correctly 1`] = `
<span
  class="kd-tag kd-tag-rtl kd-tag-shape-status kd-tag-size-middle"
>
  <span
    class="kd-tag-ellipsis"
  >
    Text
  </span>
</span>
`;

exports[`Tag renders correctly 2`] = `
<span
  class="kd-tag kd-tag-rtl kd-tag-shape-status kd-tag-size-middle"
>
  <span
    class="kd-tag-ellipsis"
  >
    Text
  </span>
</span>
`;

exports[`Tag renders correctly 3`] = `
<span
  class="kd-tag kd-tag-rtl kd-tag-shape-attribute kd-tag-size-middle"
>
  <span
    class="kd-tag-ellipsis"
  >
    Text
  </span>
</span>
`;

exports[`Tag renders correctly 4`] = `
<span
  class="kd-tag kd-tag-rtl kd-tag-shape-text kd-tag-size-middle"
>
  <span
    class="kd-tag-ellipsis"
  >
    Text
  </span>
</span>
`;

exports[`Tag renders correctly 5`] = `
<span
  class="kd-tag kd-tag-rtl kd-tag-shape-edit kd-tag-size-middle"
>
  <span
    class="kd-tag-ellipsis"
  >
    Text
  </span>
</span>
`;

exports[`Tag renders correctly 6`] = `
<span
  class="kd-tag kd-tag-rtl kd-tag-shape-status kd-tag-process kd-tag-size-middle"
>
  <span
    class="kd-tag-ellipsis"
  >
    Text
  </span>
</span>
`;

exports[`Tag renders correctly 7`] = `
<span
  class="kd-tag kd-tag-rtl kd-tag-shape-status kd-tag-success kd-tag-size-middle"
>
  <span
    class="kd-tag-ellipsis"
  >
    Text
  </span>
</span>
`;

exports[`Tag renders correctly 8`] = `
<span
  class="kd-tag kd-tag-rtl kd-tag-shape-status kd-tag-warning kd-tag-size-middle"
>
  <span
    class="kd-tag-ellipsis"
  >
    Text
  </span>
</span>
`;

exports[`Tag renders correctly 9`] = `
<span
  class="kd-tag kd-tag-rtl kd-tag-shape-status kd-tag-error kd-tag-size-middle"
>
  <span
    class="kd-tag-ellipsis"
  >
    Text
  </span>
</span>
`;

exports[`Tag renders correctly 10`] = `
<span
  class="kd-tag kd-tag-rtl kd-tag-shape-status kd-tag-end kd-tag-size-middle"
>
  <span
    class="kd-tag-ellipsis"
  >
    Text
  </span>
</span>
`;

exports[`Tag renders correctly 11`] = `
<span
  class="kd-tag kd-tag-rtl kd-tag-shape-status kd-tag-expired kd-tag-size-middle"
>
  <span
    class="kd-tag-ellipsis"
  >
    Text
  </span>
</span>
`;

exports[`Tag renders correctly 12`] = `
<span
  class="kd-tag kd-tag-rtl kd-tag-shape-status kd-tag-size-small"
>
  <span
    class="kd-tag-ellipsis"
  >
    Text
  </span>
</span>
`;

exports[`Tag renders correctly 13`] = `
<span
  class="kd-tag kd-tag-rtl kd-tag-shape-status kd-tag-size-middle"
>
  <span
    class="kd-tag-ellipsis"
  >
    Text
  </span>
</span>
`;

exports[`Tag renders correctly 14`] = `
<span
  class="kd-tag kd-tag-rtl kd-tag-shape-status kd-tag-size-large"
>
  <span
    class="kd-tag-ellipsis"
  >
    Text
  </span>
</span>
`;
